--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,8 @@ jobs:
           node-version: 20
           cache: "pnpm"
 
-      - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+      - name: 📦 Install PNPM globally
+        run: npm install -g pnpm@10
 
       - name: 🧹 Clean workspace
         run: |
@@ -44,10 +41,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+
+      - name: 📦 Install PNPM globally
+        run: npm install -g pnpm@10
+
+      - name: 🧩 Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: 🧹 Run ESLint (All Workspaces)
         run: pnpm lint
@@ -62,15 +61,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+      - name: 📦 Install PNPM globally
+        run: npm install -g pnpm@10
+
+      - name: 🧩 Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: 🧱 Build Backend
         run: |
           cd backend
-          pnpm install
           pnpm run build
 
       - name: 🧪 Run Backend Tests
@@ -85,15 +84,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+      - name: 📦 Install PNPM globally
+        run: npm install -g pnpm@10
+
+      - name: 🧩 Install dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: 🧱 Build Frontend
         run: |
           cd frontend
-          pnpm install
           pnpm run build
 
   docker-verify:
@@ -116,28 +115,3 @@ jobs:
           sleep 10
           docker compose ps
           docker compose down
-
-  deploy-staging:
-    name: 🚀 Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: [docker-verify]
-    if: github.ref == 'refs/heads/staging'
-
-    steps:
-      - name: 🟡 Staging Deploy
-        run: echo "🚀 Staging deployment will be triggered here"
-
-  deploy-production:
-    name: 🏁 Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [deploy-staging]
-    if: github.ref == 'refs/heads/production'
-
-    steps:
-      - name: 🔒 Owner Approval
-        uses: hmarr/auto-approve-action@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 🟢 Production Deploy
-        run: echo "🚀 Production deployment will start here (manual approval required)"
