--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "pnpm"
+          cache: 'pnpm'
 
-      - name: 📦 Install PNPM globally
-        run: npm install -g pnpm@10
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: true
 
       - name: 🧹 Clean workspace
         run: |
@@ -40,13 +43,20 @@ jobs:
     needs: setup
 
     steps:
-      - uses: actions/checkout@v4
+      - name: 🛎️ Checkout repository
+        uses: actions/checkout@v4
 
-      - name: 📦 Install PNPM globally
-        run: npm install -g pnpm@10
+      - name: 🧰 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
-      - name: 🧩 Install dependencies
-        run: pnpm install --frozen-lockfile
+      - name: 📦 Setup PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: true
 
       - name: 🧹 Run ESLint (All Workspaces)
         run: pnpm lint
@@ -61,11 +71,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: 📦 Install PNPM globally
-        run: npm install -g pnpm@10
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
-      - name: 🧩 Install dependencies
-        run: pnpm install --frozen-lockfile
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: true
 
       - name: 🧱 Build Backend
         run: |
@@ -84,11 +98,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: 📦 Install PNPM globally
-        run: npm install -g pnpm@10
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
-      - name: 🧩 Install dependencies
-        run: pnpm install --frozen-lockfile
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: true
 
       - name: 🧱 Build Frontend
         run: |
