--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: "npm"
 
-      - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v4
+      # ✅ Fix: Install PNPM and persist to PATH
+      - name: 📦 Install PNPM
+        run: |
+          corepack enable
+          corepack prepare pnpm@10.14.0 --activate
+          echo "PNPM version: $(pnpm --version)"
+
+      - name: ♻️ Cache PNPM Store
+        uses: actions/cache@v4
         with:
-          version: 10
-          run_install: true
+          path: ~/.pnpm-store
+          key: pnpm-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            pnpm-${{ runner.os }}-
+
+      - name: 📦 Install Dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: 🧹 Clean workspace
         run: |
@@ -43,25 +55,24 @@ jobs:
     needs: setup
 
     steps:
-      - name: 🛎️ Checkout repository
-        uses: actions/checkout@v4
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
 
-      - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+      - name: 📦 Install PNPM
+        run: |
+          corepack enable
+          corepack prepare pnpm@10.14.0 --activate
+          echo "PNPM version: $(pnpm --version)"
 
-      - name: 🧹 Run ESLint (All Workspaces)
+      - name: 📦 Install Dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: 🧹 Run ESLint
         run: pnpm lint
 
-      - name: 🔍 Run TypeScript TypeCheck
+      - name: 🔍 TypeScript Check
         run: pnpm typecheck
 
   backend-tests:
@@ -74,12 +85,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+      - name: 📦 Install PNPM
+        run: |
+          corepack enable
+          corepack prepare pnpm@10.14.0 --activate
+          echo "PNPM version: $(pnpm --version)"
+
+      - name: 📦 Install Dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: 🧱 Build Backend
         run: |
@@ -92,7 +106,7 @@ jobs:
           pnpm run test || echo "⚠️ No tests yet"
 
   frontend-build:
-    name: 🖥️ Frontend Build Check
+    name: 🖥️ Frontend Build
     runs-on: ubuntu-latest
     needs: [setup, lint-and-typecheck]
 
@@ -101,12 +115,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: true
+      - name: 📦 Install PNPM
+        run: |
+          corepack enable
+          corepack prepare pnpm@10.14.0 --activate
+          echo "PNPM version: $(pnpm --version)"
+
+      - name: 📦 Install Dependencies
+        run: pnpm install --frozen-lockfile
 
       - name: 🧱 Build Frontend
         run: |
@@ -114,21 +131,16 @@ jobs:
           pnpm run build
 
   docker-verify:
-    name: 🐳 Docker Compose Build Check
+    name: 🐳 Docker Compose Verification
     runs-on: ubuntu-latest
     needs: [backend-tests, frontend-build]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: 🐳 Set up Docker Compose
-        run: docker compose version
-
-      - name: 🧩 Build all Docker services
-        run: docker compose build
-
-      - name: ✅ Verify Docker health
+      - name: 🐳 Verify Docker
         run: |
+          docker compose build
           docker compose up -d
           sleep 10
           docker compose ps
