--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: "pnpm"
 
-      # ✅ Fix: Install PNPM and persist to PATH
-      - name: 📦 Install PNPM
+      - name: 📦 Enable Corepack & Install PNPM
         run: |
           corepack enable
           corepack prepare pnpm@10.14.0 --activate
-          echo "PNPM version: $(pnpm --version)"
+          echo "✅ PNPM version: $(pnpm --version)"
 
       - name: ♻️ Cache PNPM Store
         uses: actions/cache@v4
@@ -47,7 +46,7 @@ jobs:
       - name: 🧹 Clean workspace
         run: |
           chmod +x scripts/clean-all.sh
-          ./scripts/clean-all.sh
+          ./scripts/clean-all.sh || echo "No cleanup script found"
 
   lint-and-typecheck:
     name: 🧪 Lint + TypeCheck
@@ -56,15 +55,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: 🧰 Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "pnpm"
 
-      - name: 📦 Install PNPM
+      - name: 📦 Enable Corepack & Install PNPM
         run: |
           corepack enable
           corepack prepare pnpm@10.14.0 --activate
-          echo "PNPM version: $(pnpm --version)"
+          pnpm --version
 
       - name: 📦 Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -82,15 +83,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: 🧰 Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "pnpm"
 
-      - name: 📦 Install PNPM
+      - name: 📦 Enable Corepack & Install PNPM
         run: |
           corepack enable
           corepack prepare pnpm@10.14.0 --activate
-          echo "PNPM version: $(pnpm --version)"
+          pnpm --version
 
       - name: 📦 Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -112,15 +115,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: 🧰 Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "pnpm"
 
-      - name: 📦 Install PNPM
+      - name: 📦 Enable Corepack & Install PNPM
         run: |
           corepack enable
           corepack prepare pnpm@10.14.0 --activate
-          echo "PNPM version: $(pnpm --version)"
+          pnpm --version
 
       - name: 📦 Install Dependencies
         run: pnpm install --frozen-lockfile
@@ -138,10 +143,36 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: 🐳 Verify Docker
+      - name: 🐳 Verify Docker Build
         run: |
           docker compose build
           docker compose up -d
           sleep 10
           docker compose ps
           docker compose down
+
+  deploy-staging:
+    name: 🚀 Deploy to Staging
+    runs-on: ubuntu-latest
+    needs: [docker-verify]
+    if: github.ref == 'refs/heads/staging'
+
+    steps:
+      - name: 🧭 Deploy to Staging
+        run: |
+          echo "✅ Deploying staging environment..."
+          # Add your actual deployment command here
+          # Example: ssh user@staging-server "cd /app && docker compose pull && docker compose up -d"
+
+  deploy-production:
+    name: 🚀 Deploy to Production
+    runs-on: ubuntu-latest
+    needs: [deploy-staging]
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: 🧭 Deploy to Production
+        run: |
+          echo "✅ Deploying production environment..."
+          # Add your production deployment command here
+          # Example: ssh user@prod-server "cd /app && docker compose pull && docker compose up -d"
