--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,17 @@
 {
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
+    "moduleResolution": "node",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node", "express", "jest"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts", "src/**/*.test.ts"],
+  "exclude": ["node_modules", "dist", "**/__tests__/**", "**/*.test.ts"]
 }
