--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "lint": "pnpm -r run lint",
     "lint:fix": "pnpm -r run lint:fix",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit -p tsconfig.base.json",
     "prepare": "husky",
     "clean": "pnpm run clean:all",
-    "clean:all": "bash ./scripts/clean-all.sh",
+    "clean:all": "rm -rf node_modules frontend/node_modules backend/node_modules */dist */.turbo .turbo .next .eslintcache",
     "rebuild": "pnpm run clean && pnpm install && pnpm build:all",
-    "build:all": "pnpm -r run build"
+    "build:all": "pnpm -r run build",
+    "build": "pnpm -r run build"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
