--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Express + TypeScript backend with MongoDB",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc -p tsconfig.json",
@@ -15,7 +16,7 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "ci-checks": "npm run typecheck && npm run lint && npm run audit && npm run depcheck && npm run test",
-    "lint": "eslint ."
+    "lint": "eslint 'src/**/*.{ts,tsx,js}' --max-warnings=0"
   },
   "keywords": [],
   "author": "",
