--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,31 +20,18 @@ jobs:
       - name: 🛎️ Checkout repository
         uses: actions/checkout@v4
 
-      # 🧩 Install PNPM first — ensures it's globally available
       - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v3
+        uses: pnpm/action-setup@v4
         with:
           version: 10.14.0
-          run_install: false
 
-      # 🧰 Then setup Node (so PNPM stays in PATH)
       - name: 🧰 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
-      # ♻️ Cache PNPM store
-      - name: ♻️ Cache PNPM Store
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: pnpm-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            pnpm-${{ runner.os }}-
-
-      # 📦 Install dependencies
-      - name: 📦 Install Dependencies
+      - name: 📦 Install dependencies (root workspace)
         run: pnpm install --frozen-lockfile
 
   lint-and-typecheck:
@@ -54,26 +41,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
           version: 10.14.0
-          run_install: false
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: 📦 Install Dependencies
+      - name: 📦 Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: 🧹 Run ESLint
         run: pnpm lint
 
-      - name: 🔍 TypeScript Check
+      - name: 🔍 Run TypeScript checks
         run: pnpm typecheck
 
   backend-tests:
@@ -83,30 +65,26 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
           version: 10.14.0
-          run_install: false
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: 📦 Install Dependencies
+      - name: 📦 Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: 🧱 Build Backend
         run: |
           cd backend
-          pnpm run build
+          pnpm build
 
       - name: 🧪 Run Backend Tests
         run: |
           cd backend
-          pnpm run test || echo "⚠️ No tests yet"
+          pnpm test || echo "⚠️ No backend tests found"
 
   frontend-build:
     name: 🖥️ Frontend Build
@@ -115,25 +93,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: 📦 Setup PNPM
-        uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
           version: 10.14.0
-          run_install: false
-
-      - name: 🧰 Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: 📦 Install Dependencies
+      - name: 📦 Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: 🧱 Build Frontend
         run: |
           cd frontend
-          pnpm run build
+          pnpm build
 
   docker-verify:
     name: 🐳 Docker Compose Verification
@@ -143,13 +117,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: 🐳 Verify Docker Build
+      - name: 🐳 Build and Verify Docker Compose (prod)
         run: |
-          docker compose build
-          docker compose up -d
-          sleep 10
+          docker compose -f docker-compose.prod.yml build
+          docker compose -f docker-compose.prod.yml up -d
+          sleep 15
           docker compose ps
-          docker compose down
+          docker compose down -v
 
   deploy-staging:
     name: 🚀 Deploy to Staging
@@ -158,19 +132,31 @@ jobs:
     if: github.ref == 'refs/heads/staging'
 
     steps:
-      - name: 🧭 Deploy to Staging
+      - name: 🧭 Deploy to Staging Server
+        env:
+          SSH_KEY: ${{ secrets.STAGING_SSH_KEY }}
+          HOST: ${{ secrets.STAGING_HOST }}
+          USER: ${{ secrets.STAGING_USER }}
         run: |
-          echo "✅ Deploying staging environment..."
-          # ssh user@staging "cd /app && docker compose pull && docker compose up -d"
+          echo "${SSH_KEY}" > key.pem
+          chmod 600 key.pem
+          ssh -i key.pem -o StrictHostKeyChecking=no ${USER}@${HOST} \
+            "cd /var/www/thinc && git pull && docker compose -f docker-compose.prod.yml pull && docker compose -f docker-compose.prod.yml up -d"
 
   deploy-production:
     name: 🚀 Deploy to Production
     runs-on: ubuntu-latest
-    needs: [deploy-staging]
+    needs: [docker-verify]
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - name: 🧭 Deploy to Production
+      - name: 🧭 Deploy to Production Server
+        env:
+          SSH_KEY: ${{ secrets.PROD_SSH_KEY }}
+          HOST: ${{ secrets.PROD_HOST }}
+          USER: ${{ secrets.PROD_USER }}
         run: |
-          echo "✅ Deploying production environment..."
-          # ssh user@prod "cd /app && docker compose pull && docker compose up -d"
+          echo "${SSH_KEY}" > key.pem
+          chmod 600 key.pem
+          ssh -i key.pem -o StrictHostKeyChecking=no ${USER}@${HOST} \
+            "cd /var/www/thinc && git pull && docker compose -f docker-compose.prod.yml pull && docker compose -f docker-compose.prod.yml up -d"
