--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   mongo:
     image: mongo:6
@@ -29,7 +31,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:5000/health" ]
+      test: [ "CMD", "curl", "-f", "http://backend:5000/health" ]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -46,9 +48,9 @@ services:
     depends_on:
       backend:
         condition: service_healthy
-    restart: unless-stopped
     environment:
       - NEXT_PUBLIC_API_URL=http://backend:5000
+    restart: unless-stopped
 
 volumes:
   mongo_data:
