--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,27 +1,25 @@
 # ---------- BASE STAGE ----------
 FROM node:20-alpine AS base
 WORKDIR /app
-ENV PNPM_HOME="/pnpm"
-ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable
 
-# ---------- DEPENDENCIES STAGE ----------
+# ---------- DEPENDENCIES ----------
 FROM base AS deps
-COPY frontend/package.json frontend/pnpm-lock.yaml* ./
-RUN pnpm install --frozen-lockfile
+COPY ./frontend/package.json ./frontend/pnpm-lock.yaml* ./
+RUN cd frontend && pnpm install --frozen-lockfile
 
-# ---------- BUILD STAGE ----------
+# ---------- BUILD ----------
 FROM base AS build
-COPY --from=deps /app/node_modules ./node_modules
-COPY frontend/ ./
+COPY --from=deps /app/frontend/node_modules ./node_modules
+COPY ./frontend ./
 RUN pnpm run build
 
-# ---------- PRODUCTION STAGE ----------
+# ---------- PRODUCTION ----------
 FROM base AS prod
-ENV NODE_ENV=production
-COPY --from=build /app/.next ./.next
-COPY frontend/package.json frontend/pnpm-lock.yaml* ./
-COPY frontend/public ./public
+WORKDIR /app
+COPY --from=build /app/frontend/.next ./.next
+COPY ./frontend/public ./public
+COPY ./frontend/package.json ./frontend/pnpm-lock.yaml* ./
 RUN pnpm install --prod --frozen-lockfile --ignore-scripts
 EXPOSE 3000
 CMD ["pnpm", "start"]
